# aibank-platform

./: .gitignore  README.md
use-cases/09-atm-optimizer/: Dockerfile  README.md  pyproject.toml  requirements-agent.txt  requirements.txt
use-cases/09-atm-optimizer/agent/: __init__.py  agent.py  agentcore_app.py  bank_alias.py  config.py  session.py  system_prompt.py
use-cases/09-atm-optimizer/agent/auth/: __init__.py  role_manager.py  tool_filter.py
use-cases/09-atm-optimizer/data/: atm_locations.csv  atm_proximity.csv  bank_alias_reference.csv  branch_locations.csv  competitor_atm_locations.csv  competitor_proximity.csv  generate_sample_data.py  sample_cash_levels.csv  sample_maintenance.csv
use-cases/09-atm-optimizer/demo/: __init__.py  scenarios.py
use-cases/09-atm-optimizer/docs/: architecture.md
use-cases/09-atm-optimizer/lambda/: handler.py
use-cases/09-atm-optimizer/mcp_server/: __init__.py  athena_client.py  lambda_handler.py  server.py
use-cases/09-atm-optimizer/portal/: atm-optimizer.html
use-cases/09-atm-optimizer/streamlit/: __init__.py  app.py  auth.py  config.py
use-cases/09-atm-optimizer/tests/: __init__.py  test_agent.py  test_agent_tool_selection.py  test_atm_placement.py  test_auth.py  test_competitor_analysis.py  test_competitor_data_gen.py  test_competitor_data_loader.py  test_competitor_map.py  test_competitor_rbac.py  test_competitor_scenario.py  test_coverage_analysis.py  test_data.py  test_data_ingestion.py  test_integration.py  test_lambda_handler.py  test_mcp_server.py  test_region_compliance.py  test_security.py  test_tools.py
(+272 files in other folders)
