[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atm-profitability-optimizer"
version = "0.1.0"
description = "AI-powered What-If simulation engine for BBK ATM network profitability optimization across Bahrain"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "BBK Development Team"}
]

dependencies = [
    "strands-agents>=1.0.0",
    "strands-agents-builder>=0.1.0",
    "boto3>=1.34.0",
    "streamlit>=1.30.0",
    "folium>=0.15.0",
    "streamlit-folium>=0.18.0",
    "pyathena>=3.0.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.90.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "moto>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
include = ["agent*", "mcp_server*", "frontend*"]
